{
  "version": 4,
  "terraform_version": "1.3.9",
  "serial": 53,
  "lineage": "5de264ad-4eeb-00b8-f527-110701b27a00",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:884301278646:internet-gateway/igw-0df65c9357eb58fce",
            "id": "igw-0df65c9357eb58fce",
            "owner_id": "884301278646",
            "vpc_id": "vpc-0078c3e969fdad628"
          },
          "dependencies": [
            "module.vpc.aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main-rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:884301278646:route-table/rtb-0b3b73c2e7d643273",
            "id": "rtb-0b3b73c2e7d643273",
            "owner_id": "884301278646",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0df65c9357eb58fce",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0078c3e969fdad628"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.my-igw",
            "module.vpc.aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-050604296d25e952d",
            "route_table_id": "rtb-0b3b73c2e7d643273",
            "subnet_id": "subnet-06e18f4bb36237b30"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.my-igw",
            "module.vpc.aws_route_table.main-rtb",
            "module.vpc.aws_subnet.my-public-subnet",
            "module.vpc.aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my-private-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:884301278646:subnet/subnet-08c9753fa90ad5d35",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08c9753fa90ad5d35",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "884301278646",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0078c3e969fdad628"
          },
          "dependencies": [
            "module.vpc.aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my-public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:884301278646:subnet/subnet-06e18f4bb36237b30",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06e18f4bb36237b30",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "884301278646",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0078c3e969fdad628"
          },
          "dependencies": [
            "module.vpc.aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:884301278646:vpc/vpc-0078c3e969fdad628",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03ec654995ed4a767",
            "default_route_table_id": "rtb-09caaf9dd2843b68b",
            "default_security_group_id": "sg-07117748d3e755318",
            "dhcp_options_id": "dopt-03f0e1ddb6a221a1e",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0078c3e969fdad628",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09caaf9dd2843b68b",
            "owner_id": "884301278646"
          }
        }
      ]
    },
    {
      "module": "module.vpc-dev",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:884301278646:internet-gateway/igw-0ab51b5ac6260054f",
            "id": "igw-0ab51b5ac6260054f",
            "owner_id": "884301278646",
            "vpc_id": "vpc-0cac023d5e20cbe7b"
          },
          "dependencies": [
            "module.vpc-dev.aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-dev",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main-rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:884301278646:route-table/rtb-004b6278e322877d4",
            "id": "rtb-004b6278e322877d4",
            "owner_id": "884301278646",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ab51b5ac6260054f",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0cac023d5e20cbe7b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-dev.aws_internet_gateway.my-igw",
            "module.vpc-dev.aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-dev",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09b610e30ef9f4e6b",
            "route_table_id": "rtb-004b6278e322877d4",
            "subnet_id": "subnet-010c527f15de7bfbd"
          },
          "dependencies": [
            "module.vpc-dev.aws_internet_gateway.my-igw",
            "module.vpc-dev.aws_route_table.main-rtb",
            "module.vpc-dev.aws_subnet.my-public-subnet",
            "module.vpc-dev.aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-dev",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my-private-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:884301278646:subnet/subnet-07a649123ae94579d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07a649123ae94579d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "884301278646",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0cac023d5e20cbe7b"
          },
          "dependencies": [
            "module.vpc-dev.aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-dev",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my-public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:884301278646:subnet/subnet-010c527f15de7bfbd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-010c527f15de7bfbd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "884301278646",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0cac023d5e20cbe7b"
          },
          "dependencies": [
            "module.vpc-dev.aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-dev",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:884301278646:vpc/vpc-0cac023d5e20cbe7b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e8bd4ade98bcc135",
            "default_route_table_id": "rtb-0f2397d9e51854687",
            "default_security_group_id": "sg-04dbb3599f6ecf9be",
            "dhcp_options_id": "dopt-03f0e1ddb6a221a1e",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0cac023d5e20cbe7b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f2397d9e51854687",
            "owner_id": "884301278646"
          }
        }
      ]
    },
    {
      "module": "module.vpc-prod",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:884301278646:internet-gateway/igw-0925624502fc396d7",
            "id": "igw-0925624502fc396d7",
            "owner_id": "884301278646",
            "vpc_id": "vpc-05d21888dbe562925"
          },
          "dependencies": [
            "module.vpc-prod.aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-prod",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main-rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:884301278646:route-table/rtb-0a8f4defc612506e1",
            "id": "rtb-0a8f4defc612506e1",
            "owner_id": "884301278646",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0925624502fc396d7",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-05d21888dbe562925"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-prod.aws_internet_gateway.my-igw",
            "module.vpc-prod.aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-prod",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0279d5e8fb1bc9f06",
            "route_table_id": "rtb-0a8f4defc612506e1",
            "subnet_id": "subnet-01039d4a6459f3717"
          },
          "dependencies": [
            "module.vpc-prod.aws_internet_gateway.my-igw",
            "module.vpc-prod.aws_route_table.main-rtb",
            "module.vpc-prod.aws_subnet.my-public-subnet",
            "module.vpc-prod.aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-prod",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my-private-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:884301278646:subnet/subnet-008ed2db5396bbe8e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-008ed2db5396bbe8e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "884301278646",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-05d21888dbe562925"
          },
          "dependencies": [
            "module.vpc-prod.aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-prod",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my-public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:884301278646:subnet/subnet-01039d4a6459f3717",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01039d4a6459f3717",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "884301278646",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-05d21888dbe562925"
          },
          "dependencies": [
            "module.vpc-prod.aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-prod",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:884301278646:vpc/vpc-05d21888dbe562925",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b5c5b66f7d03c096",
            "default_route_table_id": "rtb-06e40fc28cea0a1bc",
            "default_security_group_id": "sg-08e43215dc5ea07ea",
            "dhcp_options_id": "dopt-03f0e1ddb6a221a1e",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-05d21888dbe562925",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06e40fc28cea0a1bc",
            "owner_id": "884301278646"
          }
        }
      ]
    },
    {
      "module": "module.vpc-test",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:884301278646:internet-gateway/igw-087e56fa8732f9550",
            "id": "igw-087e56fa8732f9550",
            "owner_id": "884301278646",
            "vpc_id": "vpc-0223b43509d5fb55a"
          },
          "dependencies": [
            "module.vpc-test.aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-test",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main-rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:884301278646:route-table/rtb-0bf3729653c41dd34",
            "id": "rtb-0bf3729653c41dd34",
            "owner_id": "884301278646",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-087e56fa8732f9550",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0223b43509d5fb55a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc-test.aws_internet_gateway.my-igw",
            "module.vpc-test.aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-test",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05b89a0ef593644f8",
            "route_table_id": "rtb-0bf3729653c41dd34",
            "subnet_id": "subnet-081dbacaf5291adcb"
          },
          "dependencies": [
            "module.vpc-test.aws_internet_gateway.my-igw",
            "module.vpc-test.aws_route_table.main-rtb",
            "module.vpc-test.aws_subnet.my-public-subnet",
            "module.vpc-test.aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-test",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my-private-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:884301278646:subnet/subnet-05ca142baa1fd4f69",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05ca142baa1fd4f69",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "884301278646",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0223b43509d5fb55a"
          },
          "dependencies": [
            "module.vpc-test.aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-test",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my-public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:884301278646:subnet/subnet-081dbacaf5291adcb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-081dbacaf5291adcb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "884301278646",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0223b43509d5fb55a"
          },
          "dependencies": [
            "module.vpc-test.aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc-test",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:884301278646:vpc/vpc-0223b43509d5fb55a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09c648a7295e03ef7",
            "default_route_table_id": "rtb-0030caa75c9164e4b",
            "default_security_group_id": "sg-0b94c16121164f5aa",
            "dhcp_options_id": "dopt-03f0e1ddb6a221a1e",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0223b43509d5fb55a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0030caa75c9164e4b",
            "owner_id": "884301278646"
          }
        }
      ]
    }
  ]
}